--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,10 @@ remote_theme: thelehhman/plainwhite-jekyll
 plugins:
   - jekyll-feed
 
+markdown: kramdown
+kramdown:
+   math_engine: mathjax
+
 plainwhite:
   name: Billy Sumners
   social_links:
